# vmvm

./: .gitignore  PKGBUILD  README.md  example-vmconfig.yml  presets.yml  pyproject.toml  vmvm
lib/: tpm_manager.py
smb/: README.md  docker-compose.yml
tests/: test_builder.py  test_configparser.py
vmvm/: builder.py  config_parser.py  exec.py  hw_caps.py  main.py  prototypes.py  utils.py  vmvm.py
vmvm/lib/: tpm_manager.py
