[tool.poetry]
name = "vmvm"
version = "1.0.0"
description = "QEMU wrapper and shell"
authors = ["rufiorogue"]
readme = "README.md"

classifiers = [
    "Intended Audience :: Developers",
    "Environment :: Console",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Operating System :: POSIX :: Linux",
]

[tool.poetry.dependencies]
python = "^3.10"
pyyaml = "^6.0.1"

[tool.poetry.dev-dependencies]
pytest = { version = "^7.2.0" }

[tool.poetry.scripts]
vmvm = 'vmvm.main:main'


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
